--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "ethers": "^6.13.4",
     "lucide-react": "^0.455.0",
     "pinata-web3": "^0.5.2",
     "react": "^18.3.1",
